tests/lean/eqn_compiler_loop.lean.expected.out
eqn_compiler_loop.lean:3:8: error: non-exhaustive set of equations, the following cases are missing:
 (succ a) (a_1)
